--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,31 +8,24 @@ bootloader = "limine"
 
 
 [dependencies]
-limine = "0.2.0"
+limine = "0.3.1"
 x86_64 = "0.15.1"
-volatile = "0.5.1"
-uefi = "0.27.0"
-enumn = "0.1.12"
+uefi = "0.32.0"
+enumn = "0.1.14"
 bit_field = "0.10.2"
-raw-cpuid = "11.0.1"
+raw-cpuid = "11.1.0"
+talc = "4.4.1"
 
+#volatile = "0.5.1"
 #elf = "0.7.2" / elfloader = "0.16.0"
 #accessor = "0.3.3"
 #xhci = "0.9.2"
 
-[dependencies.spin]
-version = "0.9.8"
-default-features = false
-features = []
+#[dependencies.spin]
+#version = "0.9.8"
 
-[dependencies.good_memory_allocator]
-version = "0.1.7"
-features = ["allocator"]
+
 
 [dependencies.lazy_static]
-version = "1.0"
+version = "1.5.0"
 features = ["spin_no_std"]
-
-[dependencies.arrayvec]
-version = "0.7.4"
-default-features = false
